Closes-Bug: #1536573 #1535210 #1534005 #1533623 - Fixed the sorting of alarms in dashboard. Higher severity alarms will show on top. - Fixed acknowledgement of alarms in popup. - Aligned the circle in the alarms grid. - Changed the action column to single ack icon. This avoids need of change in icon.

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -2888,7 +2888,10 @@ p.error, p.error-text {
 .circle.orange.filled {
     background-color: #ffbf87;
 }
-
+.circle-grid-style {
+	margin-top: 4px;
+	opacity:1;
+}
 .chart-settings .color-selection .circle {
     display:inline-block;
     margin:0 5px;
@@ -3519,3 +3522,12 @@ tr.collapsibleFamilyattributes{
 
 #peer_selection>table tr.data-row>td{
     padding-top:10px!important;}
+
+#dashboard-alerts-modal ul.grid-action-menu{
+    margin-top:-95px;
+    margin-right:3px;
+}
+
+.max-z-index {
+	z-index: 30000;
+}
